@@ -6,7 +6,7 @@
     {
         public static int fieldSize = 0;
         public int detonatedMines = 0;
-        public string[,] pozicii = new string[fieldSize, fieldSize];
+        public string[,] positions = new string[fieldSize, fieldSize];
 
         public Battlefield()
         {
@@ -18,7 +18,7 @@
             {
                 for (int j = 0; j < fieldSize; j++)
                 {
-                    this.pozicii[i, j] = " - ";
+                    this.positions[i, j] = " - ";
                 }
             }
         }
@@ -49,7 +49,7 @@
                 Console.Write(i.ToString() + "|");
                 for (int j = 0; j < fieldSize; j++)
                 {
-                    Console.Write(" " + this.pozicii[i, j].ToString());
+                    Console.Write(" " + this.positions[i, j].ToString());
                 }
                 Console.WriteLine(""); Console.WriteLine(""); Console.WriteLine("");
             }
@@ -78,9 +78,9 @@
                     tempMineXCoordinate = Convert.ToInt32(rnd.Next(0, fieldSize - 1));
                     tempMineYCoordinate = Convert.ToInt32(rnd.Next(0, fieldSize - 1));
 
-                    if (this.pozicii[tempMineXCoordinate, tempMineYCoordinate] == " - ")
+                    if (this.positions[tempMineXCoordinate, tempMineYCoordinate] == " - ")
                     {
-                        this.pozicii[tempMineXCoordinate, tempMineYCoordinate] = " " +
+                        this.positions[tempMineXCoordinate, tempMineYCoordinate] = " " +
                                                                                  Convert.ToString(rnd.Next(1, 6) + " ");
                     }
                     else
@@ -96,27 +96,27 @@
         {
             if ((XCoord - 1 >= 0) && (XCoord - 1 < fieldSize) && (YCoord - 1 >= 0) && (YCoord - 1 < fieldSize))
             {
-                this.pozicii[XCoord - 1, YCoord - 1] = " X ";
+                this.positions[XCoord - 1, YCoord - 1] = " X ";
             }
 
             if ((XCoord - 1 >= 0) && (XCoord - 1 < fieldSize) && (YCoord + 1 >= 0) && (YCoord + 1 < fieldSize))
             {
-                this.pozicii[XCoord - 1, YCoord + 1] = " X ";
+                this.positions[XCoord - 1, YCoord + 1] = " X ";
             }
 
             if ((XCoord + 1 >= 0) && (XCoord + 1 < fieldSize) && (YCoord - 1 >= 0) && (YCoord - 1 < fieldSize))
             {
-                this.pozicii[XCoord + 1, YCoord - 1] = " X ";
+                this.positions[XCoord + 1, YCoord - 1] = " X ";
             }
 
             if ((XCoord + 1 >= 0) && (XCoord + 1 < fieldSize) && (YCoord + 1 >= 0) && (YCoord + 1 < fieldSize))
             {
-                this.pozicii[XCoord + 1, YCoord + 1] = " X ";
+                this.positions[XCoord + 1, YCoord + 1] = " X ";
             }
 
             if ((XCoord >= 0) && (XCoord < fieldSize) && (YCoord >= 0) && (YCoord < fieldSize))
             {
-                this.pozicii[XCoord, YCoord] = " X ";
+                this.positions[XCoord, YCoord] = " X ";
             }
         }
 
@@ -124,47 +124,47 @@
         {
             if ((XCoord - 1 >= 0) && (XCoord - 1 < fieldSize) && (YCoord - 1 >= 0) && (YCoord - 1 < fieldSize))
             {
-                this.pozicii[XCoord - 1, YCoord - 1] = " X ";
+                this.positions[XCoord - 1, YCoord - 1] = " X ";
             }
 
             if ((XCoord >= 0) && (XCoord < fieldSize) && (YCoord - 1 >= 0) && (YCoord - 1 < fieldSize))
             {
-                this.pozicii[XCoord, YCoord - 1] = " X ";
+                this.positions[XCoord, YCoord - 1] = " X ";
             }
 
             if ((XCoord + 1 >= 0) && (XCoord + 1 < fieldSize) && (YCoord - 1 >= 0) && (YCoord - 1 < fieldSize))
             {
-                this.pozicii[XCoord + 1, YCoord - 1] = " X ";
+                this.positions[XCoord + 1, YCoord - 1] = " X ";
             }
 
             if ((XCoord - 1 >= 0) && (XCoord - 1 < fieldSize) && (YCoord >= 0) && (YCoord < fieldSize))
             {
-                this.pozicii[XCoord - 1, YCoord] = " X ";
+                this.positions[XCoord - 1, YCoord] = " X ";
             }
 
             if ((XCoord >= 0) && (XCoord < fieldSize) && (YCoord >= 0) && (YCoord < fieldSize))
             {
-                this.pozicii[XCoord, YCoord] = " X ";
+                this.positions[XCoord, YCoord] = " X ";
             }
 
             if ((XCoord + 1 >= 0) && (XCoord + 1 < fieldSize) && (YCoord >= 0) && (YCoord < fieldSize))
             {
-                this.pozicii[XCoord + 1, YCoord] = " X ";
+                this.positions[XCoord + 1, YCoord] = " X ";
             }
 
             if ((XCoord - 1 >= 0) && (XCoord - 1 < fieldSize) && (YCoord + 1 >= 0) && (YCoord + 1 < fieldSize))
             {
-                this.pozicii[XCoord - 1, YCoord + 1] = " X ";
+                this.positions[XCoord - 1, YCoord + 1] = " X ";
             }
 
             if ((XCoord >= 0) && (XCoord < fieldSize) && (YCoord + 1 >= 0) && (YCoord + 1 < fieldSize))
             {
-                this.pozicii[XCoord, YCoord + 1] = " X ";
+                this.positions[XCoord, YCoord + 1] = " X ";
             }
 
             if ((XCoord + 1 >= 0) && (XCoord + 1 < fieldSize) && (YCoord + 1 >= 0) && (YCoord + 1 < fieldSize))
             {
-                this.pozicii[XCoord + 1, YCoord + 1] = " X ";
+                this.positions[XCoord + 1, YCoord + 1] = " X ";
             }
         }
 
@@ -172,82 +172,82 @@
         {
             if ((XCoord - 2 >= 0) && (XCoord - 2 < fieldSize) && (YCoord >= 0) && (YCoord < fieldSize))
             {
-                this.pozicii[XCoord - 2, YCoord] = " X ";
+                this.positions[XCoord - 2, YCoord] = " X ";
             }
 
             if ((XCoord - 1 >= 0) && (XCoord - 1 < fieldSize) && (YCoord >= 0) && (YCoord < fieldSize))
             {
-                this.pozicii[XCoord - 1, YCoord] = " X ";
+                this.positions[XCoord - 1, YCoord] = " X ";
             }
 
             if ((XCoord >= 0) && (XCoord < fieldSize) && (YCoord >= 0) && (YCoord < fieldSize))
             {
-                this.pozicii[XCoord, YCoord] = " X ";
+                this.positions[XCoord, YCoord] = " X ";
             }
 
             if ((XCoord + 1 >= 0) && (XCoord + 1 < fieldSize) && (YCoord >= 0) && (YCoord < fieldSize))
             {
-                this.pozicii[XCoord + 1, YCoord] = " X ";
+                this.positions[XCoord + 1, YCoord] = " X ";
             }
 
             if ((XCoord + 2 >= 0) && (XCoord + 2 < fieldSize) && (YCoord >= 0) && (YCoord < fieldSize))
             {
-                this.pozicii[XCoord + 2, YCoord] = " X ";
+                this.positions[XCoord + 2, YCoord] = " X ";
             }
 
             if ((XCoord - 1 >= 0) && (XCoord - 1 < fieldSize) && (YCoord - 1 >= 0) && (YCoord - 1 < fieldSize))
             {
-                this.pozicii[XCoord - 1, YCoord - 1] = " X ";
+                this.positions[XCoord - 1, YCoord - 1] = " X ";
             }
 
             if ((XCoord >= 0) && (XCoord < fieldSize) && (YCoord >= 0) && (YCoord < fieldSize))
             {
-                this.pozicii[XCoord, YCoord] = " X ";
+                this.positions[XCoord, YCoord] = " X ";
             }
 
             if ((XCoord + 1 >= 0) && (XCoord + 1 < fieldSize) && (YCoord + 1 >= 0) && (YCoord + 1 < fieldSize))
             {
-                this.pozicii[XCoord + 1, YCoord + 1] = " X ";
+                this.positions[XCoord + 1, YCoord + 1] = " X ";
             }
 
             if ((XCoord - 1 >= 0) && (XCoord - 1 < fieldSize) && (YCoord + 1 >= 0) && (YCoord + 1 < fieldSize))
             {
-                this.pozicii[XCoord - 1, YCoord + 1] = " X ";
+                this.positions[XCoord - 1, YCoord + 1] = " X ";
             }
 
             if ((XCoord >= 0) && (XCoord < fieldSize) && (YCoord >= 0) && (YCoord < fieldSize))
             {
-                this.pozicii[XCoord, YCoord] = " X ";
+                this.positions[XCoord, YCoord] = " X ";
             }
 
             if ((XCoord + 1 >= 0) && (XCoord + 1 < fieldSize) && (YCoord - 1 >= 0) && (YCoord - 1 < fieldSize))
             {
-                this.pozicii[XCoord + 1, YCoord - 1] = " X ";
+                this.positions[XCoord + 1, YCoord - 1] = " X ";
             }
 
             if ((XCoord >= 0) && (XCoord < fieldSize) && (YCoord - 2 >= 0) && (YCoord - 2 < fieldSize))
             {
-                this.pozicii[XCoord, YCoord - 2] = " X ";
+                this.positions[XCoord, YCoord - 2] = " X ";
             }
 
             if ((XCoord >= 0) && (XCoord < fieldSize) && (YCoord - 1 >= 0) && (YCoord - 1 < fieldSize))
             {
-                this.pozicii[XCoord, YCoord - 1] = " X ";
+                this.positions[XCoord, YCoord - 1] = " X ";
             }
 
             if ((XCoord >= 0) && (XCoord < fieldSize) && (YCoord >= 0) && (YCoord < fieldSize))
             {
-                this.pozicii[XCoord, YCoord] = " X ";
+                this.positions[XCoord, YCoord] = " X ";
             }
 
             if ((XCoord >= 0) && (XCoord < fieldSize) && (YCoord + 1 >= 0) && (YCoord + 1 < fieldSize))
             {
-                this.pozicii[XCoord, YCoord + 1] = " X ";
+                this.positions[XCoord, YCoord + 1] = " X ";
             }
 
             if ((XCoord >= 0) && (XCoord < fieldSize) && (YCoord + 2 >= 0) && (YCoord + 2 < fieldSize))
             {
-                this.pozicii[XCoord, YCoord + 2] = " X ";
+                this.positions[XCoord, YCoord + 2] = " X ";
             }
         }
 
@@ -255,107 +255,107 @@
         {
             if ((XCoord - 1 >= 0) && (XCoord - 1 < fieldSize) && (YCoord - 1 >= 0) && (YCoord - 1 < fieldSize))
             {
-                this.pozicii[XCoord - 1, YCoord - 1] = " X ";
+                this.positions[XCoord - 1, YCoord - 1] = " X ";
             }
 
             if ((XCoord >= 0) && (XCoord < fieldSize) && (YCoord - 1 >= 0) && (YCoord - 1 < fieldSize))
             {
-                this.pozicii[XCoord, YCoord - 1] = " X ";
+                this.positions[XCoord, YCoord - 1] = " X ";
             }
 
             if ((XCoord + 1 >= 0) && (XCoord + 1 < fieldSize) && (YCoord - 1 >= 0) && (YCoord - 1 < fieldSize))
             {
-                this.pozicii[XCoord + 1, YCoord - 1] = " X ";
+                this.positions[XCoord + 1, YCoord - 1] = " X ";
             }
 
             if ((XCoord - 1 >= 0) && (XCoord - 1 < fieldSize) && (YCoord >= 0) && (YCoord < fieldSize))
             {
-                this.pozicii[XCoord - 1, YCoord] = " X ";
+                this.positions[XCoord - 1, YCoord] = " X ";
             }
 
             if ((XCoord >= 0) && (XCoord < fieldSize) && (YCoord >= 0) && (YCoord < fieldSize))
             {
-                this.pozicii[XCoord, YCoord] = " X ";
+                this.positions[XCoord, YCoord] = " X ";
             }
 
             if ((XCoord + 1 >= 0) && (XCoord + 1 < fieldSize) && (YCoord >= 0) && (YCoord < fieldSize))
             {
-                this.pozicii[XCoord + 1, YCoord] = " X ";
+                this.positions[XCoord + 1, YCoord] = " X ";
             }
 
             if ((XCoord - 1 >= 0) && (XCoord - 1 < fieldSize) && (YCoord + 1 >= 0) && (YCoord + 1 < fieldSize))
             {
-                this.pozicii[XCoord - 1, YCoord + 1] = " X ";
+                this.positions[XCoord - 1, YCoord + 1] = " X ";
             }
 
             if ((XCoord >= 0) && (XCoord < fieldSize) && (YCoord + 1 >= 0) && (YCoord + 1 < fieldSize))
             {
-                this.pozicii[XCoord, YCoord + 1] = " X ";
+                this.positions[XCoord, YCoord + 1] = " X ";
             }
 
             if ((XCoord + 1 >= 0) && (XCoord + 1 < fieldSize) && (YCoord + 1 >= 0) && (YCoord + 1 < fieldSize))
             {
-                this.pozicii[XCoord + 1, YCoord + 1] = " X ";
+                this.positions[XCoord + 1, YCoord + 1] = " X ";
             }
 
             if ((XCoord - 1 >= 0) && (XCoord - 1 < fieldSize) && (YCoord + 2 >= 0) && (YCoord + 2 < fieldSize))
             {
-                this.pozicii[XCoord - 1, YCoord + 2] = " X ";
+                this.positions[XCoord - 1, YCoord + 2] = " X ";
             }
 
             if ((XCoord >= 0) && (XCoord < fieldSize) && (YCoord + 2 >= 0) && (YCoord + 2 < fieldSize))
             {
-                this.pozicii[XCoord, YCoord + 2] = " X ";
+                this.positions[XCoord, YCoord + 2] = " X ";
             }
 
             if ((XCoord + 1 >= 0) && (XCoord + 1 < fieldSize) && (YCoord + 2 >= 0) && (YCoord + 2 < fieldSize))
             {
-                this.pozicii[XCoord + 1, YCoord + 2] = " X ";
+                this.positions[XCoord + 1, YCoord + 2] = " X ";
             }
 
             if ((XCoord - 1 >= 0) && (XCoord - 1 < fieldSize) && (YCoord - 2 >= 0) && (YCoord - 2 < fieldSize))
             {
-                this.pozicii[XCoord - 1, YCoord - 2] = " X ";
+                this.positions[XCoord - 1, YCoord - 2] = " X ";
             }
 
             if ((XCoord >= 0) && (XCoord < fieldSize) && (YCoord - 2 >= 0) && (YCoord - 2 < fieldSize))
             {
-                this.pozicii[XCoord, YCoord - 2] = " X ";
+                this.positions[XCoord, YCoord - 2] = " X ";
             }
 
             if ((XCoord + 1 >= 0) && (XCoord + 1 < fieldSize) && (YCoord - 2 >= 0) && (YCoord - 2 < fieldSize))
             {
-                this.pozicii[XCoord + 1, YCoord - 2] = " X ";
+                this.positions[XCoord + 1, YCoord - 2] = " X ";
             }
 
             if ((XCoord - 2 >= 0) && (XCoord - 2 < fieldSize) && (YCoord - 1 >= 0) && (YCoord - 1 < fieldSize))
             {
-                this.pozicii[XCoord - 2, YCoord - 1] = " X ";
+                this.positions[XCoord - 2, YCoord - 1] = " X ";
             }
 
             if ((XCoord - 2 >= 0) && (XCoord - 2 < fieldSize) && (YCoord >= 0) && (YCoord < fieldSize))
             {
-                this.pozicii[XCoord - 2, YCoord] = " X ";
+                this.positions[XCoord - 2, YCoord] = " X ";
             }
 
             if ((XCoord - 2 >= 0) && (XCoord - 2 < fieldSize) && (YCoord + 1 >= 0) && (YCoord + 1 < fieldSize))
             {
-                this.pozicii[XCoord - 2, YCoord + 1] = " X ";
+                this.positions[XCoord - 2, YCoord + 1] = " X ";
             }
 
             if ((XCoord + 2 >= 0) && (XCoord + 2 < fieldSize) && (YCoord - 1 >= 0) && (YCoord - 1 < fieldSize))
             {
-                this.pozicii[XCoord + 2, YCoord - 1] = " X ";
+                this.positions[XCoord + 2, YCoord - 1] = " X ";
             }
 
             if ((XCoord + 2 >= 0) && (XCoord + 2 < fieldSize) && (YCoord >= 0) && (YCoord < fieldSize))
             {
-                this.pozicii[XCoord + 2, YCoord] = " X ";
+                this.positions[XCoord + 2, YCoord] = " X ";
             }
 
             if ((XCoord + 2 >= 0) && (XCoord + 2 < fieldSize) && (YCoord + 1 >= 0) && (YCoord + 1 < fieldSize))
             {
-                this.pozicii[XCoord + 2, YCoord + 1] = " X ";
+                this.positions[XCoord + 2, YCoord + 1] = " X ";
             }
         }
 
@@ -363,134 +363,134 @@
         {
             if ((XCoord - 1 >= 0) && (XCoord - 1 < fieldSize) && (YCoord - 1 >= 0) && (YCoord - 1 < fieldSize))
             {
-                this.pozicii[XCoord - 1, YCoord - 1] = " X ";
+                this.positions[XCoord - 1, YCoord - 1] = " X ";
             }
 
             if ((XCoord >= 0) && (XCoord < fieldSize) && (YCoord - 1 >= 0) && (YCoord - 1 < fieldSize))
             {
-                this.pozicii[XCoord, YCoord - 1] = " X ";
+                this.positions[XCoord, YCoord - 1] = " X ";
             }
 
             if ((XCoord + 1 >= 0) && (XCoord + 1 < fieldSize) && (YCoord - 1 >= 0) && (YCoord - 1 < fieldSize))
             {
-                this.pozicii[XCoord + 1, YCoord - 1] = " X ";
+                this.positions[XCoord + 1, YCoord - 1] = " X ";
             }
 
             if ((XCoord - 1 >= 0) && (XCoord - 1 < fieldSize) && (YCoord >= 0) && (YCoord < fieldSize))
             {
-                this.pozicii[XCoord - 1, YCoord] = " X ";
+                this.positions[XCoord - 1, YCoord] = " X ";
             }
 
             if ((XCoord >= 0) && (XCoord < fieldSize) && (YCoord >= 0) && (YCoord < fieldSize))
             {
-                this.pozicii[XCoord, YCoord] = " X ";
+                this.positions[XCoord, YCoord] = " X ";
             }
 
             if ((XCoord + 1 >= 0) && (XCoord + 1 < fieldSize) && (YCoord >= 0) && (YCoord < fieldSize))
             {
-                this.pozicii[XCoord + 1, YCoord] = " X ";
+                this.positions[XCoord + 1, YCoord] = " X ";
             }
 
             if ((XCoord - 1 >= 0) && (XCoord - 1 < fieldSize) && (YCoord + 1 >= 0) && (YCoord + 1 < fieldSize))
             {
-                this.pozicii[XCoord - 1, YCoord + 1] = " X ";
+                this.positions[XCoord - 1, YCoord + 1] = " X ";
             }
 
             if ((XCoord >= 0) && (XCoord < fieldSize) && (YCoord + 1 >= 0) && (YCoord + 1 < fieldSize))
             {
-                this.pozicii[XCoord, YCoord + 1] = " X ";
+                this.positions[XCoord, YCoord + 1] = " X ";
             }
 
             if ((XCoord + 1 >= 0) && (XCoord + 1 < fieldSize) && (YCoord + 1 >= 0) && (YCoord + 1 < fieldSize))
             {
-                this.pozicii[XCoord + 1, YCoord + 1] = " X ";
+                this.positions[XCoord + 1, YCoord + 1] = " X ";
             }
 
             if ((XCoord - 1 >= 0) && (XCoord - 1 < fieldSize) && (YCoord + 2 >= 0) && (YCoord + 2 < fieldSize))
             {
-                this.pozicii[XCoord - 1, YCoord + 2] = " X ";
+                this.positions[XCoord - 1, YCoord + 2] = " X ";
             }
 
             if ((XCoord >= 0) && (XCoord < fieldSize) && (YCoord + 2 >= 0) && (YCoord + 2 < fieldSize))
             {
-                this.pozicii[XCoord, YCoord + 2] = " X ";
+                this.positions[XCoord, YCoord + 2] = " X ";
             }
 
             if ((XCoord + 1 >= 0) && (XCoord + 1 < fieldSize) && (YCoord + 2 >= 0) && (YCoord + 2 < fieldSize))
             {
-                this.pozicii[XCoord + 1, YCoord + 2] = " X ";
+                this.positions[XCoord + 1, YCoord + 2] = " X ";
             }
 
             if ((XCoord - 1 >= 0) && (XCoord - 1 < fieldSize) && (YCoord - 2 >= 0) && (YCoord - 2 < fieldSize))
             {
-                this.pozicii[XCoord - 1, YCoord - 2] = " X ";
+                this.positions[XCoord - 1, YCoord - 2] = " X ";
             }
 
             if ((XCoord >= 0) && (XCoord < fieldSize) && (YCoord - 2 >= 0) && (YCoord - 2 < fieldSize))
             {
-                this.pozicii[XCoord, YCoord - 2] = " X ";
+                this.positions[XCoord, YCoord - 2] = " X ";
             }
 
             if ((XCoord + 1 >= 0) && (XCoord + 1 < fieldSize) && (YCoord - 2 >= 0) && (YCoord - 2 < fieldSize))
             {
-                this.pozicii[XCoord + 1, YCoord - 2] = " X ";
+                this.positions[XCoord + 1, YCoord - 2] = " X ";
             }
 
             if ((XCoord - 2 >= 0) && (XCoord - 2 < fieldSize) && (YCoord - 1 >= 0) && (YCoord - 1 < fieldSize))
             {
-                this.pozicii[XCoord - 2, YCoord - 1] = " X ";
+                this.positions[XCoord - 2, YCoord - 1] = " X ";
             }
 
             if ((XCoord - 2 >= 0) && (XCoord - 2 < fieldSize) && (YCoord >= 0) && (YCoord < fieldSize))
             {
-                this.pozicii[XCoord - 2, YCoord] = " X ";
+                this.positions[XCoord - 2, YCoord] = " X ";
             }
 
             if ((XCoord - 2 >= 0) && (XCoord - 2 < fieldSize) && (YCoord + 1 >= 0) && (YCoord + 1 < fieldSize))
             {
-                this.pozicii[XCoord - 2, YCoord + 1] = " X ";
+                this.positions[XCoord - 2, YCoord + 1] = " X ";
             }
 
             if ((XCoord + 2 >= 0) && (XCoord + 2 < fieldSize) && (YCoord - 1 >= 0) && (YCoord - 1 < fieldSize))
             {
-                this.pozicii[XCoord + 2, YCoord - 1] = " X ";
+                this.positions[XCoord + 2, YCoord - 1] = " X ";
             }
 
             if ((XCoord + 2 >= 0) && (XCoord + 2 < fieldSize) && (YCoord >= 0) && (YCoord < fieldSize))
             {
-                this.pozicii[XCoord + 2, YCoord] = " X ";
+                this.positions[XCoord + 2, YCoord] = " X ";
             }
 
             if ((XCoord + 2 >= 0) && (XCoord + 2 < fieldSize) && (YCoord + 1 >= 0) && (YCoord + 1 < fieldSize))
             {
-                this.pozicii[XCoord + 2, YCoord + 1] = " X ";
+                this.positions[XCoord + 2, YCoord + 1] = " X ";
             }
 
             if ((XCoord - 2 >= 0) && (XCoord - 2 < fieldSize) && (YCoord - 2 >= 0) && (YCoord - 2 < fieldSize))
             {
-                this.pozicii[XCoord - 2, YCoord - 2] = " X ";
+                this.positions[XCoord - 2, YCoord - 2] = " X ";
             }
 
             if ((XCoord + 2 >= 0) && (XCoord + 2 < fieldSize) && (YCoord - 2 >= 0) && (YCoord - 2 < fieldSize))
             {
-                this.pozicii[XCoord + 2, YCoord - 2] = " X ";
+                this.positions[XCoord + 2, YCoord - 2] = " X ";
             }
 
             if ((XCoord - 2 >= 0) && (XCoord - 2 < fieldSize) && (YCoord + 2 >= 0) && (YCoord + 2 < fieldSize))
             {
-                this.pozicii[XCoord - 2, YCoord + 2] = " X ";
+                this.positions[XCoord - 2, YCoord + 2] = " X ";
             }
 
             if ((XCoord + 2 >= 0) && (XCoord + 2 < fieldSize) && (YCoord + 2 >= 0) && (YCoord + 2 < fieldSize))
             {
-                this.pozicii[XCoord + 2, YCoord + 2] = " X ";
+                this.positions[XCoord + 2, YCoord + 2] = " X ";
             }
         }
 
         //tuka se izbira kva bomba da grymne
         public void DetonateMine(int XCoord, int YCoord)
         {
-            switch (Convert.ToInt32(this.pozicii[XCoord, YCoord]))
+            switch (Convert.ToInt32(this.positions[XCoord, YCoord]))
             {
                 case 1: 
                     this.DetonateMine1(XCoord, YCoord);
@@ -510,7 +510,7 @@
             }
         }
 
-        public int PrebroiOstavashtiteMinichki()
+        public int GetRemainingMinesCount()
         {
             int count = 0;
 
@@ -518,7 +518,7 @@
             {
                 for (int j = 0; i < fieldSize; i++)
                 {
-                    if ((this.pozicii[i, j] != " X ") && (this.pozicii[i, j] != " - "))
+                    if ((this.positions[i, j] != " X ") && (this.positions[i, j] != " - "))
                     {
                         count++;
                     }
@@ -557,16 +557,16 @@
                     XCoord = Convert.ToInt32(coordinates.Substring(0, 1));
                     YCoord = Convert.ToInt32(coordinates.Substring(2));
 
-                    if ((XCoord < 0) || (YCoord > fieldSize - 1) || (bf.pozicii[XCoord, YCoord] == " - "))
+                    if ((XCoord < 0) || (YCoord > fieldSize - 1) || (bf.positions[XCoord, YCoord] == " - "))
                     {
                         Console.WriteLine("Invalid Move");
                     }
-                } while ((XCoord < 0) || (YCoord > fieldSize - 1) || (bf.pozicii[XCoord, YCoord] == " - "));
+                } while ((XCoord < 0) || (YCoord > fieldSize - 1) || (bf.positions[XCoord, YCoord] == " - "));
 
                 bf.DetonateMine(XCoord, YCoord);
                 bf.DisplayField();
                 bf.detonatedMines++;
-            } while (bf.PrebroiOstavashtiteMinichki() != 0);
+            } while (bf.GetRemainingMinesCount() != 0);
 
             Console.WriteLine("Game Over. Detonated Mines: " + bf.detonatedMines);
             Console.ReadKey();
